[package]
edition = "2021"
name = "int-vec-2d"
version = "0.2.0"
#rust-version = "nightly"
authors = ["warlock <internalmike@gmail.com>"]
description = "Vectors, points, rectangles, etc. with `i16` coordinates."
readme = "README.md"
documentation = "https://docs.rs/int-vec-2d/"
keywords = ["vector", "integer", "affine", "rect", "point"]
categories = ["data-structures", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/int-vec-2d"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
enum-derive-2018 = { version = "3.0.1", default-features = false }
either = { version = "1.6.1", default-features = false }
macro-attr-2018 = "3.0.0"
num-traits = { version = "0.2.14", default-features = false }
serde = { version = "1.0.219", default-features = false, features=["derive"], optional = true }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[badges]
maintenance = { status = "experimental" }
